# VSCodeSTM32Template

./: .gitignore  CMakeLists.txt  arm-none-eabi-gcc.cmake
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_uart.h  stm32f4xx_ll_usart.h
Inc/: main.h  usart.h
Src/: gpio.c  main.c  main.cpp  stm32f4xx_it.c  syscalls.c
